# pomodoro

./: Makefile  README.md  fixtures.py  main.py  pomodoro.sqlite  pyproject.toml  settings.py
database/: __init__.py  database.py  models.py
handlers/: __init__.py  categories.py  ping.py  tasks.py
repository/: Task.py
schema/: task.py
